Fix spacing between text and img

--- a/stylesheets/mywebsite.css
+++ b/stylesheets/mywebsite.css
@@ -8,6 +8,7 @@ h1 {
   display: inline-block;
   margin-top: 18%;
   margin-left: 2%;
+  margin-right: 1%;
   font-family: 'Lobster', cursive;
   color: white;
 }
@@ -24,4 +25,5 @@ img {
   margin-top: 2%;
   margin-bottom: 2%;
   margin-right: 2%;
+  margin-left: 1%;
 }
